--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 .reveal {
-    font-family: "Amazon Ember", Helvetica, sans-serif;
+    font-family: "Amazon Ember", sans-serif;
     font-size: 36px;
     font-weight: normal;
     color: #323232; 
@@ -10,3 +10,233 @@
   line-height: 1.3;
   font-weight: inherit; 
 }
+
+.reveal ul,
+.reveal ol {
+  margin-left: 2em;
+  text-align: left;
+}
+
+/* Ensure certain elements are never larger than the slide itself */
+.reveal img,
+.reveal video,
+.reveal iframe {
+  max-width: 95%;
+  max-height: 95%; }
+
+.reveal h1 {
+  font-size: 1.8em;
+}
+
+.reveal p {
+  margin-left: 2em;
+  text-align: left;
+}
+
+.reveal h2.centertitle {
+  margin-left: 0;
+  text-align: center;
+}
+
+.reveal h2.twocoltitle {
+  margin-left: 1%;
+}
+
+body {
+  background-color: #fafafa;
+}
+
+.reveal section p.author {
+  margin-top: 2em;
+  margin-left: 0;
+  line-height: 1.5;
+  font-size: 0.9em;
+  text-align: center;
+}
+
+#slidesInfo {
+  font-size: 0.45em; 
+  margin: 1.5em auto 0 auto; 
+  text-align: center;
+}
+
+.reveal p.centerp {
+  margin-left: 0;
+  text-align: center;
+}
+
+#wcagoverview {
+  height: 80%;
+  width: 80%;
+}
+
+.reveal section ul, .reveal section ol{
+  width: 80%;
+  line-height: 1.4;
+}
+
+.reveal section .twocol {
+  display: flex;
+  align-items: flex-start;
+}
+
+.reveal .twocol .leftcol {
+  flex: 1 0 40%;
+  font-size: 0.8em;
+}
+
+.reveal .twocol .rightcol {
+  margin-left: 2.5rem;
+  max-width: 400px;
+  flex: 0 1 30%;
+}
+
+.reveal .source {
+  margin-left: 0;
+  margin-top: 2em;
+  text-align: center;
+  font-size: 0.45em;
+}
+
+#mssource {
+  margin: 0 auto;
+  font-size: 0.45em;
+  text-align: center;
+}
+
+#a11ymap {
+  width: 50%;
+  height: 50%;
+}
+
+#video {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#axe {
+  margin-left: 0;
+  margin-right: 0;
+  width: 80%;
+  height: 80%;
+}
+
+.reveal hr {
+  border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+#msinclusive {
+  margin-top: 0;
+  margin-bottom: 0;
+  height: 31%;
+  width: 31%;
+}
+
+#gotowebinar {
+  margin-top: 0;
+  margin-bottom: 0;
+  height: 30%;
+  width: 30%;
+}
+
+.reveal ul.source {
+  list-style: none;
+  font-size: .7em;
+}
+
+.reveal section img {
+  margin: 15px 0px;
+  border: none;
+  box-shadow: none; }
+
+#wcagoverview {
+    height: 70%;
+    width: 70%;
+}
+
+/*********************************************
+ * PROGRESS BAR
+ *********************************************/
+ .reveal .progress {
+  background: rgba(0, 0, 0, 0.2);
+  color: #42affa; }
+
+.reveal .progress span {
+  -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+  -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+
+
+  .reveal table {
+    margin: auto;
+    border-collapse: collapse;
+    border-spacing: 0; }
+  
+  .reveal table th {
+    font-weight: bold; }
+  
+  .reveal table th,
+  .reveal table td {
+    text-align: left;
+    padding: 0.2em 0.5em 0.2em 0.5em;
+    border-bottom: 1px solid; }
+  
+  .reveal table th[align="center"],
+  .reveal table td[align="center"] {
+    text-align: center; }
+  
+  .reveal table th[align="right"],
+  .reveal table td[align="right"] {
+    text-align: right; }
+  
+  .reveal table tbody tr:last-child th,
+  .reveal table tbody tr:last-child td {
+    border-bottom: none; }
+
+
+/*********************************************
+ * LINKS
+ *********************************************/
+ .reveal a {
+  color: #0073bb;
+  text-decoration: none;
+  -webkit-transition: color .15s ease;
+  -moz-transition: color .15s ease;
+  transition: color .15s ease; }
+
+.reveal a:hover {
+  color: #00a1c9;
+  box-shadow: inset 0 -0.375rem 0 #bcdceb;
+  border: none; }
+
+.reveal .roll span:after {
+  color: #fff;
+  background: #068de9; }
+
+  .reveal pre {
+    display: block;
+    position: relative;
+    width: 90%;
+    margin: 20px auto;
+    text-align: left;
+    font-size: 0.55em;
+    font-family: monospace;
+    line-height: 1.2em;
+    word-wrap: break-word;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
+  
+  .reveal code {
+    font-family: monospace;
+    text-transform: none; }
+  
+  .reveal pre code {
+    display: block;
+    padding: 5px;
+    overflow: auto;
+    max-height: 400px;
+    word-wrap: normal; }  
