--- a/styles/main.css
+++ b/styles/main.css
@@ -1,14 +1,15 @@
 .reveal {
-    font-family: "Amazon Ember", sans-serif;
-    font-size: 36px;
-    font-weight: normal;
-    color: #323232; 
+  font-family: "Amazon Ember", sans-serif;
+  font-size: 36px;
+  font-weight: normal;
+  color: #323232;
 }
 
 .reveal .slides > section,
 .reveal .slides > section > section {
   line-height: 1.3;
-  font-weight: inherit; 
+  font-weight: inherit;
+  width: 90%;
 }
 
 .reveal ul,
@@ -24,7 +25,8 @@
 .reveal video,
 .reveal iframe {
   max-width: 95%;
-  max-height: 95%; }
+  max-height: 95%;
+}
 
 .reveal h1 {
   font-size: 1.8em;
@@ -57,8 +59,8 @@ body {
 }
 
 #slidesInfo {
-  font-size: 0.45em; 
-  margin: 1.5em auto 0 auto; 
+  font-size: 0.45em;
+  margin: 1.5em auto 0 auto;
   text-align: center;
 }
 
@@ -124,8 +126,13 @@ body {
 
 .reveal hr {
   border: 0;
-    height: 1px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  height: 1px;
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.75),
+    rgba(0, 0, 0, 0)
+  );
 }
 
 #msinclusive {
@@ -144,103 +151,116 @@ body {
 
 .reveal ul.source {
   list-style: none;
-  font-size: .7em;
+  font-size: 0.7em;
 }
 
 .reveal section img {
   margin: 15px 0px;
   border: none;
-  box-shadow: none; }
+  box-shadow: none;
+}
 
 #wcagoverview {
-    height: 70%;
-    width: 70%;
+  height: 70%;
+  width: 70%;
 }
 
 /*********************************************
  * PROGRESS BAR
  *********************************************/
- .reveal .progress {
+.reveal .progress {
   background: rgba(0, 0, 0, 0.2);
-  color: #42affa; }
+  color: #42affa;
+}
 
 .reveal .progress span {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+}
 
+.reveal table {
+  margin: auto;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
-  .reveal table {
-    margin: auto;
-    border-collapse: collapse;
-    border-spacing: 0; }
-  
-  .reveal table th {
-    font-weight: bold; }
-  
-  .reveal table th,
-  .reveal table td {
-    text-align: left;
-    padding: 0.2em 0.5em 0.2em 0.5em;
-    border-bottom: 1px solid; }
-  
-  .reveal table th[align="center"],
-  .reveal table td[align="center"] {
-    text-align: center; }
-  
-  .reveal table th[align="right"],
-  .reveal table td[align="right"] {
-    text-align: right; }
-  
-  .reveal table tbody tr:last-child th,
-  .reveal table tbody tr:last-child td {
-    border-bottom: none; }
+.reveal table th {
+  font-weight: bold;
+}
 
+.reveal table th,
+.reveal table td {
+  text-align: left;
+  padding: 0.2em 0.5em 0.2em 0.5em;
+  border-bottom: 1px solid;
+}
+
+.reveal table th[align="center"],
+.reveal table td[align="center"] {
+  text-align: center;
+}
+
+.reveal table th[align="right"],
+.reveal table td[align="right"] {
+  text-align: right;
+}
+
+.reveal table tbody tr:last-child th,
+.reveal table tbody tr:last-child td {
+  border-bottom: none;
+}
 
 /*********************************************
  * LINKS
  *********************************************/
- .reveal a {
+.reveal a {
   color: #0073bb;
   text-decoration: none;
-  -webkit-transition: color .15s ease;
-  -moz-transition: color .15s ease;
-  transition: color .15s ease; }
+  -webkit-transition: color 0.15s ease;
+  -moz-transition: color 0.15s ease;
+  transition: color 0.15s ease;
+}
 
 .reveal a:hover {
   color: #00a1c9;
   box-shadow: inset 0 -0.375rem 0 #bcdceb;
-  border: none; }
+  border: none;
+}
 
 .reveal .roll span:after {
   color: #fff;
-  background: #068de9; }
+  background: #068de9;
+}
 
-  .reveal pre {
-    display: block;
-    position: relative;
-    width: 90%;
-    margin: 20px auto;
-    text-align: left;
-    font-size: 0.55em;
-    font-family: monospace;
-    line-height: 1.2em;
-    word-wrap: break-word;
-    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
-  
-  .reveal code {
-    font-family: monospace;
-    text-transform: none; }
-  
-  .reveal pre code {
-    display: block;
-    padding: 5px;
-    overflow: auto;
-    max-height: 400px;
-    word-wrap: normal; } 
-    
-  .reveal p,
-  .reveal li {
-    orphans: 3;
-    widows: 3;
-  }
+.reveal pre {
+  display: block;
+  position: relative;
+  width: 90%;
+  margin: 20px auto;
+  text-align: left;
+  font-size: 0.55em;
+  font-family: monospace;
+  line-height: 1.2em;
+  word-wrap: break-word;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
+}
+
+.reveal code {
+  font-family: monospace;
+  text-transform: none;
+}
+
+.reveal pre code {
+  display: block;
+  padding: 5px;
+  overflow: auto;
+  max-height: 400px;
+  word-wrap: normal;
+}
+
+.reveal p,
+.reveal li {
+  orphans: 3;
+  widows: 3;
+}
